--- a/typinggame/index.html
+++ b/typinggame/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- SEO Tags -->
-    <title>Typing Defender - Free 3D Typing Shooter Game</title>
+    <title>Typing Game - Nepali Typing Game</title>
     <meta name="description" content="Play Typing Defender, a free 3D typing shooter game. Improve your WPM and accuracy while defending system from cyber enemies.">
     <meta name="author" content="Anil Lama">
 
@@ -543,7 +543,7 @@ const AudioSys = {
 };
 
 const WORD_LIST = [
-  "shell","alpha","bravo","target","vector","laser","shield","plasma","orbit","space",
+  "nepal","malai","ramro","lagchha","vector","laser","shield","plasma","orbit","space",
   "planet","meteor","rocket","alien","ufo","robot","cyborg","neon","pulse","matrix",
   "data","link","node","grid","flash","spark","blast","fire","storm","wind","rain",
   "thunder","light","dark","shadow","ghost","spirit","soul","mind","power","energy",
@@ -560,7 +560,7 @@ const WORD_LIST = [
   "noise","smooth","sharp","pixel","frame","motion","engine","driver","device",
   "screen","input","output","mouse","keyboard","touch","gesture","click","scroll",
   "zoom","pan",
-  "array","object","string","number","boolean","null","undefined","function","method","class",
+  "love","you","string","number","boolean","null","undefined","function","method","class",
   "module","import","export","default","async","await","promise","callback","event","listener",
   "state","props","mount","unmount","effect","layout","theme","style","color","font",
   "border","margin","padding","radius","fonepay","layer","panel","window","dialog",
