--- a/new/index.html
+++ b/new/index.html
@@ -482,7 +482,7 @@
         <!-- Left Ad Space -->
         <div class="ad-space ad-left">
             <!-- PASTE YOUR GOOGLE ADSENSE CODE HERE -->
-<img src="assets/img/NT.jpg" style="width:100%; height:100%; object-fit:contain;" alt="Ad">
+<img src="image_2026-02-07_152325290.png" style="width:100%; height:100%; object-fit:contain;" alt="Ad">
         </div>
 
         <!-- Center Menu Content -->
