--- a/new/index.html
+++ b/new/index.html
@@ -580,7 +580,7 @@
         <h1>TYPING GAME</h1>
         <h2>BY ANIL LAMA </h2>
         <p class="subtitle">Destroy enemies by typing words.<br>
-        Login to save your High Score.<br>
+        Login to save your High Score and do the typing skills fast<br>
         Press ESC to Pause.</p>
         
         <button id="startBtn" class="btn hidden" onclick="game.start()">START GAME</button>
