--- a/test/index.html
+++ b/test/index.html
@@ -243,7 +243,7 @@
 
 <!-- 🔔 ONE-SHOT TING SOUND -->
 <audio id="tingSound" preload="auto">
-  <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_9a5f7b4f44.mp3">
+  <source src="Followup.m4a">
 </audio>
 
 <!-- 🎵 LOOPING AMBIENT SOUND -->
