--- a/followup/index.html
+++ b/followup/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSD Follow-Up Portal - The Turquoise Moon</title>
+  <title>CSD Follow-Up Portal</title>
 
   <style>
     /* --- 2026 DESIGN SYSTEM --- */
