--- a/followup/index.html
+++ b/followup/index.html
@@ -268,7 +268,7 @@
   <h2>New Follow-Up</h2>
   <form id="followForm">
     <div class="input-group">
-      <input id="client" class="form-control" placeholder="Mobile Number" required>
+      <input id="client" class="form-control" placeholder="Mobile Number/Other" required>
       <input id="subject" class="form-control" placeholder="Subject" required>
       <input id="date" type="date" class="form-control" required>
       <input id="time" type="time" class="form-control" required>
@@ -286,7 +286,7 @@
     <table>
       <thead>
         <tr>
-          <th>Client</th>
+          <th>Mobile Number</th>
           <th>Subject</th>
           <th>Date</th>
           <th>Time</th>
