--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSD Follow-Up Portal</title>
+  <title>CSD Follow-Up Portal </title>
 
   <style>
     :root {
@@ -278,7 +278,7 @@
 <div class="container">
 
 <header>
-  <div class="brand"><h1>🌙 CSD Follow-Up Portal</h1></div>
+  <div class="brand"><h1>🌙 CSD Follow-Up Portal <strong>(Keep This Tab Open To Receive Your Reminder.)<strong/></h1></div>
   <!-- Green Signal Badge -->
   <div class="status-badge" id="systemStatus">
     <div class="status-dot"></div> System Active
